--- a/mtg-proxy/Dockerfile
+++ b/mtg-proxy/Dockerfile
@@ -1,7 +1,7 @@
 ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
-ARG MTG_VERSION="2.1.13"
+ARG MTG_VERSION="2.1.11"
 
 RUN apk add --no-cache jq ca-certificates curl tar && \
     ARCH=$(uname -m) && \
@@ -15,7 +15,7 @@ RUN apk add --no-cache jq ca-certificates curl tar && \
     curl -fsSL "https://github.com/9seconds/mtg/releases/download/v${MTG_VERSION}/mtg-${MTG_VERSION}-${MTG_ARCH}.tar.gz" \
         -o /tmp/mtg.tar.gz && \
     tar -xzf /tmp/mtg.tar.gz -C /tmp && \
-    mv /tmp/mtg /usr/local/bin/mtg && \
+    find /tmp -name "mtg" -type f -exec mv {} /usr/local/bin/mtg \; && \
     chmod +x /usr/local/bin/mtg && \
     rm -rf /tmp/mtg* && \
     apk del curl tar
